# obs-plugin-easy-config

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: release.yml
cmake/: macos-plugin-info.plist.in  obsconfig.h
data/locale/: en-US.ini  zh-CN.ini
docs/: architecture.md  product-spec.md  release.md  technical-research.md
packaging/windows/: obs-plugin-easy-config.nsi
scripts/: download-github-release-asset.sh  package-linux.sh  package-macos.sh  package-windows.ps1
src/: easy-config-dock.cpp  easy-config-dock.hpp  obs-controller.cpp  obs-controller.hpp  path-template.cpp  path-template.hpp  plugin-config.cpp  plugin-config.hpp  plugin-main.cpp
tests/: path-template-test.cpp
